--- a/CSS/style.css
+++ b/CSS/style.css
@@ -117,11 +117,13 @@ h6{
 .p-op{
     color:#728080;
 }
-.li-op{
-    color: #FFFFFF;
+.newsw{
+    color:#FFFFFF;
 }
-.p-news{
-    color:#728080; 
+
+.p-op{
+    color:#728080;
+    margin-left: 20%; 
 }
 .b17{
     background-color: #bd4252;
@@ -138,7 +140,8 @@ h6{
     border:1px solid #Be8542;
     font-weight: 900;
     color: #FFFFFF;
-    margin-top: 100%; 
+    margin-top: 100%;
+     
 }
 .b9{
     background-color:#bc6142;
@@ -146,7 +149,11 @@ h6{
     border:1px solid #bc6142;
     font-weight: 900;
     color: #FFFFFF;
-    
     margin-top: 100%;
 }     
-    
+.gear{
+    list-style-image:url(../images/gearbullet.jpg);
+}
+.li-op{
+    list-style-image:url(../images/speechbubble.jpg);
+}
